Change hex codes for color contrast issues

--- a/app/styles/nw-variables.scss
+++ b/app/styles/nw-variables.scss
@@ -3,9 +3,9 @@ $nw-white: #ffffff;
 $nw-white-1: #F2F8FA;
 $nw-white-2: #ededed;
 $nw-verylightgrey: #e0e0e0;
-$nw-lightgrey: #b8b8b8;
+$nw-lightgrey:#595959;
 $nw-mediumgrey: #646464;
-$nw-mediumdarkgrey: #666666;
+$nw-mediumdarkgrey: #474747;
 $nw-darkgrey: #343434;
 $nw-black: #000000;
 
@@ -24,7 +24,7 @@ $nw-yellow: #ffe680;
 
 // GREENS
 $nw-lightgreen: #95d0bf;
-$nw-mediumgreen: #73ab9b;
+$nw-mediumgreen: #305545;
 $nw-darkgreen: #5f8c7f;
 $nw-darkgreygreen: #415f68;
 
